--- a/output/refs.bib
+++ b/output/refs.bib
@@ -54,6 +54,12 @@
 	publisher = "American Mathematical Society",
 	year = 2014
 }
+@book{rudin3,
+	author = "Walter Rudin",
+	title = "Function Theory in the Unit Ball of $\mathbb{C}^n$",
+	publisher = "Springer-Verlag",
+	year = 1980
+}
 @unpublished{reynir,
 	author = "Reynir Axelsson",
 	title = "Tvinnfallagreining {I}",
