--- a/verkefni.tex
+++ b/verkefni.tex
@@ -1,3 +1,4 @@
+% TODO remove all '/in'
 % TODO specify all measures as complex
 % TODO make everythin Hausdorff???
 % TODO add carleson cite
@@ -632,6 +633,14 @@ so
 &< \infty
 \end{align*}
 by the same reasoning as before.
+
+Note that we left some fundementals unmentioned.
+Specifically the fact that $f_H$ and $g_H$ are measureable.
+To show that $g$ is measureable it suffices to show that $(g_n)_{n \in \mathbb{N}}$ are measureable.
+We, therefore, can show that the preimage under $g_n$ of each point is measureble, since $g_n$ is simple, for each $n$.
+But the preimage is a (possibly uncountable) union of half-open intervals so it is the union of a closed set and an open set.
+So $g$ is measureable.
+
 
 \begin{proof}[Proof of \ref{mylemma}]
 % TODO is f_H measurable? L^1?
