--- a/verkefni.tex
+++ b/verkefni.tex
@@ -241,6 +241,14 @@ The section could be titled: Glossary, Variable Names, etc.
 \chapter*{Acknowledgments}
 \addcontentsline{toc}{chapter}{Acknowledgments}
 Í þessum kafla koma fram þakkir til þeirra sem hafa styrkt rannsóknina með fjárframlögum, aðstöðu eða vinnu. T.d. styrktarsjóðir, fyrirtæki, leiðbeinendur, og aðrir aðilar sem hafa á einhvern hátt aðstoðað við gerð verkefnisins, þ.m.t. vinir og fjölskylda ef við á. Þakkir byrja á oddatölusíðu (hægri síðu).
+Sandra
+Benni
+Ragnar
+Jón
+Atli
+Hjörtur
+Eyleifur
+Tóti
 
 \pagenumbering{arabic}
 \setcounter{page}{1}
@@ -290,7 +298,7 @@ The above example also shows us another pitfall, $E \subset F \implies \mu(E) \l
 If we have a complex measure $\mu: \mathcal{F} \rightarrow \mathbb{C}$ we may want a positive measure $\lambda$ that dominates it, in the sense that $|\mu(E)| \leq \lambda(E)$.
 We would also want $\lambda$ to be `small' in some sense.
 We will refer to a collection $(E_n)_{n \in \mathbb{N}}$ in $\mathcal{F}$ as a \emph{partition of E} if they are pairwise disjoint and their union is $E$.
-The measure $\lambda$ mentioned earlier will then fulfill
+The measure $\lambda$ mentioned earlier will then satisfy
 \[
 	\lambda(E) = \sum_{n \in \mathbb{N}} \lambda(E) \geq |\mu(E)|.
 \]
@@ -500,7 +508,45 @@ for all $f \in C_0(X)$ and
 
 \chapter{Rudin-Carleson theorem}
 \section{Rudin-Carleson theorem}
-% TODO 'the theorem will be proved as Rudin did it in his ortiginal paper \citep{...}'
+We will refer to the \emph{closed unit square} in $\mathbb{C}$ by
+\[
+	S = \{z;\ |\max(\Re z, \Im z)| \leq 1\}.
+\]
+The square with side-lengths $a$ and bottom-left corner at $w$ is then denoted by $w + aS$.
+
+To adequately discuss the main result of this theorem we need a few fundamentals about closed set in $\mathbb{R}$ of Lebesgue-measure zero.
+Let $K$ be such a set.
+We can show by contradiction that $K$ is totally disconnected.
+Recall that a set is totally disconnected if each connected component is a singleton.
+If $K$ was not totally disconnected it would have an open subset meaning its measure could not be zero.
+Another important thing to note is that $K$ could include an uncountable number of elements.
+Results like \ref{mylemma} would be trivial if this were not the case.
+A famous example of an uncountable, closed set of Lebesgue-measure zero is the Cantor set.
+We will also make use of the following lemma:
+\begin{lemma}
+\label{somelemma}
+Let
+	$\varepsilon > 0$,
+	$K$ be a closed subset of $\mathbb{T}$ of Lebesgue-measure zero,
+	and $f: K \rightarrow \mathbb{C}$.
+Then there exist pairwise disjoint $E_1, E_2, ..., E_n$ and $w_1, w_2, ..., w_n$ such that 
+\[
+	E_1 \cup E_2 \cup ... \cup E_n = K
+\]
+and
+\[
+	f(E_k) \subset w_k + \varepsilon S \tag*{$k = 1, 2, ..., n$.}
+\]
+\end{lemma}
+\begin{proof}
+% This follows directly from the standard analytic definition of continuity along with the fact that an intersection of $K$ and a closed square is closed.
+We know that $f(K)$ is compact, so we can choose $w$ and $a$ such that $f(K) \subset w + As$.
+
+\end{proof}
+
+In the discussion before the proof of \ref{mylemma} a logarithm is used.
+This is the base $2$ logarithm, specifically it satisfies $\log 2^x = x$.
+
 \begin{theorem}[Rudin-Carleson theroem]
 \label{rudincarleson}
 Let $E$ be a closed subset of $\mathbb{T}$ of Lebesgue-measure $0$,
@@ -508,15 +554,22 @@ Let $E$ be a closed subset of $\mathbb{T}$ of Lebesgue-measure $0$,
 	and let $T$ be a subset of $\mathbb{C}$ homeomorphic to $\overline{\mathbb{D}}$ such that $f(\overline{\mathbb{D}}) \subset T$.
 Then there exists an $F \in \mathcal{A}$, such that $F = f$ on $E$ and $F(\overline{\mathbb{D}}) \subset T$. % TODO skilgreina allt
 \end{theorem}
+This will be proved as Rudin did it in his original paper \citep{rudin}.
 We will break the proof into several lemmas.  % TODO how many?
 \begin{lemma}
 \label{mylemma}
-Let $H$ be a closed set of Lebesgue-measure $0$.
-Then there exists an integrable function $\mu > 1$ such that
-	$\mu$ is continuous on $\mathbb{T} \setminus H$,
-	$\mu = +\infty$ on $H$,
-	if $w \in H$ then $\mu(z) \xrightarrow{z \rightarrow w} +\infty$, and
-	$\mu$ has a bounded derivative on any closed subarc of $\mathbb{T} \setminus H$.
+Let $H$ be a closed set of Lebesgue-measure zero.
+Then there exists a function $h: \mathbb{T} \rightarrow [1, \infty]$ such that 
+\begin{enumerate}
+\item
+$h$ is in $L^1(\mathbb{T}, \sigma)$
+\item
+$h|_{\mathbb{T} \setminus H}$ is in $C^{\infty}$.
+\item
+$h(z) = \infty$ if and only if $z$ is in $H$.
+\item
+$\lim_{w \rightarrow z} h(w) = \infty$ for all $z$ in $H$.
+\end{enumerate}
 \end{lemma}
 Recall from set theory that if $(X, d)$ is a metric space, $A$ is a subset of $X$ and $x$ is a point of $X$ then the distance between $x$ and $A$ is
 \[
@@ -538,19 +591,29 @@ We will define function $f: [0, 1] \rightarrow [0, \infty]$ by
 	f_H(x) = 2\log \left ( \frac{H_H(x) - V_H(x)}{2} \right ) - \log((x - V_H(x))(H_H(x) - x))
 \]
 and show that this is the desired function.
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{graph8}
+\caption{An example of $f_H$ where $H$ includes nine points. The points of $H$ are represented by circles. }
+\end{figure}
 
 Let's first define a family of functions indexed with $a, b \in \mathbb{R}$ by
 \[
 	f_{a, b}: [a, b] \rightarrow [0, \infty],
 	x \mapsto 2\log \left ( \frac{b - a}{2} \right ) - \log((x - a)(b - x))
 \]
-and show they fulfill the following properties:
+and show they satisfy the following properties:
 \begin{enumerate}
 \item
 $f_{a, b}(a + (b - a)2^{-n}) \leq n$, % TODO shift n left or right maybe
 \item
 $f_{a, b}(x) = f_{a, b}(b + a - x)$.
 \end{enumerate}
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{graph2}
+\caption{The graph of $f_{0, 1}$ and $g_{0, 1}$.}
+\end{figure}
 The first point gives us a handy estimate and the second tells us $f_{a, b}$ is symmetric around $(a + b)/2$.
 Note that for the first point it suffices to consider when $a = 0$, since $a$ denotes a simple translation.
 We then have that
@@ -604,6 +667,7 @@ where the second equality is by monotone convergence and the last is by some tes
 This rationale also holds for general $a$ and $b$, since $a$ does not effect the value of the integral and $b$ scales it.
 
 Let's now go back to $f_H$.
+Note that we can locally look at $f$ as a function in $\{f_{a, b}\}_{a, b \in [0, 1]}$, that is, $f(x) = f_{V_H(x), H_H(x)}(x)$.
 We can define a function
 \[
 	g_H(x) = g_{V_H(x), H_H(x)}(x)
@@ -620,30 +684,41 @@ and a sequence of functions
 We have that $(g_n)_{n \in \mathbb{N}}$ is monotone with limit $g$, similar to before, and $f \leq g$.
 Note that, independent of $H$, we have
 \[
-	\sigma(f^{-1}(k)) = 2^{-k}
+	\sigma(f_H^{-1}(k)) = 2^{-k}
 \]
 so
 \begin{align*}
 \int f_H\ d\sigma
 &\leq \int g_H\ d\sigma\\
 &= \int \lim_{n \rightarrow \infty} g_n\ d\sigma\\
-&= \lim_{n \rightarrow \infty} g_n\ d\sigma\\
+&= \lim_{n \rightarrow \infty} \int g_n\ d\sigma\\
 &= \lim_{n \rightarrow \infty} \sum_{k = 1}^n k2^{-k}\\
 &= \sum_{k \in \mathbb{N}} k2^{-k}\\
 &< \infty
 \end{align*}
+\begin{center}
+\end{center}
 by the same reasoning as before.
 
-Note that we left some fundementals unmentioned.
-Specifically the fact that $f_H$ and $g_H$ are measureable.
-To show that $g$ is measureable it suffices to show that $(g_n)_{n \in \mathbb{N}}$ are measureable.
-We, therefore, can show that the preimage under $g_n$ of each point is measureble, since $g_n$ is simple, for each $n$.
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{graph101}
+\caption{An example of $f_H$ where $H$ includes several points. The points of $H$ are represented by circles. }
+\end{figure}
+Note that we left some fundamentals unmentioned.
+Specifically the fact that $f_H$ and $g_H$ are measurable.
+To show that $g$ is measurable it suffices to show that $(g_n)_{n \in \mathbb{N}}$ are measurable.
+We, therefore, can show that the preimage under $g_n$ of each point is measurable, since $g_n$ is simple, for each $n$.
 But the preimage is a (possibly uncountable) union of half-open intervals so it is the union of a closed set and an open set.
-So $g$ is measureable.
-
-
+So $g$ is measurable.
+% TODO is f measureable
+To show that $f$ is measurable it suffices to show that $P_{\lambda} = \{x \in [0, 1];\ f(x) < \lambda\}$ is measurable for all $\lambda$ in $[0, \infty]$ \citep[lemma $1.3.9$]{tao}.
+This trivially holds, since $P_{\lambda}$ is open.
 \begin{proof}[Proof of \ref{mylemma}]
-% TODO is f_H measurable? L^1?
+We may assume that $H$ is not empty, since the statement holds vacuously if that were the case.
+Let $f$ be as described above,
+	$g: \mathbb{T} \rightarrow [0, 1]$ such that $g|_{[0, 1[}$ is a diffeomorphism, $g(0) = g(1)$, and $g^{-1}(0)$ is in $H$,
+	and let $h = 2 + f \circ g$.
 \end{proof}
 \begin{lemma}
 \label{rudinlemma1}
@@ -654,10 +729,9 @@ It suffices to show that this holds if $f$ takes only two values on $E$, since s
 Let's assume these values are $0$ and $\alpha \neq 0$, with $\Re \alpha \geq 0$, $E_0 = f^{-1}(0)$, and $E_1 = f^{-1}(\alpha)$.
 Our assumption that $f$ only takes two values then implies that $E_0 \cup E_1 = E$.
 
-Let $u_H(z)$ be the Poisson integral of the function from the above lemma. % TODO add ref fix up this line
-This function is continuous on $\mathbb{T} \setminus H$, $u_H|_H = \infty$, and $\lim_{z \rightarrow w} u_H(z) = \infty$ for $w \in H$.
-...
-We now define
+Let $u_H(z)$ be the Poisson integral of the function from \ref{mylemma}.
+This function is continuous on $\mathbb{T} \setminus H$, $u_H|_H = \infty$, and $\lim_{z \rightarrow w} u_H(z) = \infty$ for $w \in H$ \citep[page $234$]{rudin2}.
+Let's set $v_H$ as the conjugate harmonic of $u_H$ and define
 \[
 	g_H(z) =
 	\left \{
@@ -667,12 +741,12 @@ We now define
 		\end{array}.
 	\right .
 \]
-By our construction of $u_H$ we see the $\Re g > 1$, so it has a well defined square root. % TODO look better at this
+By our construction of $u_H$ we see the $\Re g_H > 1$, so it has a well defined square root. % TODO look better at this
 Let's call it $h_H$ and define
 \[
 	q = \frac{h_{E_1}}{h_{E_0} + h_{E_1}}.
 \]
-Note that $|\arg h_H(z)| < \pi/4$ since if a $w \in \mathbb{C}$ had an argument outside of this range then its square would have and argument outside of the range $[-\pi/2, \pi/2]$ meaning $\Re w^2 < 0$.
+Note that $|\arg h_H(z)| \leq \pi/4$ since if a $w \in \mathbb{C}$ had an argument outside of this range then its square would have and argument outside of the range $[-\pi/2, \pi/2]$ meaning $\Re w^2 < 0$.
 Also, $q(z) = 0$ if and only if $h_{E_0} = \infty$, so $q$ is zero only on $E_0$, and $q(z) = 1$ if and only if $h_{E_1} = \infty$, so $q$ is one only on $E_1$.
 We now want to show that $0 \leq \Re q \leq 1$.
 We will let $z, w \in \mathbb{C}$, with $|\arg z|, |\arg w| < \pi/4$ and $\Re z, \Re w > 1$, and show that $0 < \Re z/(w + z) < 1$.
@@ -725,11 +799,7 @@ The desired function in then obtained with $F = \Phi \circ g$.
 \end{proof}
 \begin{lemma}
 \label{rudinlemma3}
-If $f$ is a continue function on $E$ which maps $E$ into
-\[
-	S = \{z;\ |\max(\Re z, \Im z)| \leq 1\}, % TODO make this definition global (to the section)?
-\]
-then there exists a sequence $(f_n)_{n \in \mathbb{N}}$ of simple continuous function on $E$ such that
+If $f$ is a continue function on $E$ which maps $E$ into $S$ then there exists a sequence $(f_n)_{n \in \mathbb{N}}$ of simple continuous function on $E$ such that
 \[
 	f(x) = \sum_{n \in \mathbb{N}} f_n(z)
 	\text{ and }
@@ -771,7 +841,7 @@ Let $M_n = 2^{-n + 1}$ and note that $|g_n(z)| \leq \sqrt{2}\cdot 2^{-n} < 2^{-n
 	\sqrt{2}\sum_{n \in \mathbb{N}} 2^{-n} =
 	\sqrt{2} < \infty
 \]
-so the Weierstrass M-test tells us that $F$ converges uniformly. % TODO proof this and add a ref
+so the Weierstrass M-test tells us that $F$ converges uniformly.
 We also have that
 \[
 	\Re F = \sum_{n \in \mathbb{N}} \Re g_n \leq \sum_{n \in \mathbb{N}} 2^{-n} = 1.
@@ -1274,7 +1344,7 @@ Its closure, $V_r$, is then convex as well.
 By Hahn-Banach % TODO ref (convex!!!)
 we can define a bounded linear functional $\alpha$, such that $\alpha(f) > 1$ and $|\alpha| < 1$, on $V_r$.
 We can then define a measure $\mu_1$ by the Riesz representation theorem % TODO ref
-that fulfills
+that satisfies
 \[
 	\alpha(g) = \int g\ d\mu_1
 \]
@@ -1308,7 +1378,7 @@ This is the contradiction that gives that $f \in V_r$.
 We can now take a $F_1$ in $U_r$, and therefore also in $B$ such that $|f - F_1| < \lambda/2$ on $S$, with $\lambda := 1 - r$.
 Remember that $F_1 \in U_r$ implies that $\|F_1\| < r$.
 Now let $f_1 = f - F_1$ and use the same method as above to obtain an $F_2$ such that $\|F_2\| < \lambda/2$ and $|f - F_2| < \lambda/4$ on $S$.
-Iterating this process yields a sequence $(F_n)_{n \in \mathbb{N}}$ from $B$ that fulfill $\|F_n\| < 2^{1 - n}\lambda$ for $n > 1$ and
+Iterating this process yields a sequence $(F_n)_{n \in \mathbb{N}}$ from $B$ that such that $\|F_n\| < 2^{1 - n}\lambda$ for $n > 1$ and
 \[
 	\left | f - \sum_{k = 1}^n F_k \right | < 2^{-n}\lambda
 \]
