--- a/verkefni.tex
+++ b/verkefni.tex
@@ -35,6 +35,7 @@
 \usepackage{tabularx}
 \usepackage{mathabx}
 \usepackage{mathtools}
+\usepackage{wrapfig}
 % Configurations
 \graphicspath{{figs/}}
 
@@ -1250,6 +1251,11 @@ These spaces are referred to as the \emph{Hardy spaces}.
 \end{definition}
 A useful result from the theory of Hardy spaces is if $f \in H^1$ then there exist $g, h \in H^2$ such that $f = g \cdot h$ \citep[Theorem $17.10$]{rudin2}.
 \begin{definition}
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.5\textwidth]{approach-region-7}
+\caption{An example of $f_H$ where $H$ includes nine points. The points of $H$ are represented by circles. }
+\end{figure}
 Let $0 < \alpha < 1$.
 We refer to the open convex hull of
 \[
@@ -1268,7 +1274,6 @@ We say that $u$ has \emph{nontangential limit $\lambda$ at $e^{it}$} if, for all
 \]
 for all sequences $(z_k)_{k \in \mathbb{N}}$ in $e^{it}\Omega_{\alpha}$ that converge to $e^{it}$.
 \end{definition}
-
 \begin{lemma}
 \label{FMRlemma2}
 Let $f \in H^1$.
@@ -1289,7 +1294,7 @@ $f = P[F]$.
 Let $g$ and $h$ be functions in $L^2(\mathbb{T})$ such that $f = g \cdot h$, as described above.
 We have by Lemma \ref{FMRlemma3b} functions $G$ and $H$ in $L^2(\mathbb{T})$ such that $g = P[G]$ and $h = P[H]$.
 Theorem $11.23$ in \ref{rudin2} (along with discussion on the prior page) states that if $f$ is in $L^1(\mathbb{T})$ then $P[f]$ has nontangential limit $f(e^{it})$ at almost every $e^{it}$.
-We also have by the Hölder inequality that on a finite measure space (such as $\mathbb{T}$ with the Lebesgue measure) $\|f\|_1 \leq \|f\|_2$.
+We also have by the Hölder inequality that on a finite measure space (such as $\mathbb{T}$ with the Lebesgue measure) $\|h\|_1 \leq \|h\|_2$.
 So $g$ and $h$ have nontangential limits almost everywere on $\mathbb{T}$.
 This tells us that $f$ also has nontangential limits almost everywhere on $\mathbb{T}$, since $f = g \cdot h$.\\
 \ref{p2}:\\
@@ -1302,8 +1307,15 @@ Note that
 	\lim_{r \rightarrow 1} \|F - f_r\|_1 = \lim_{r \rightarrow 1} \int |F - f_r|\ d\sigma = 0
 \]
 since $f_r \rightarrow F$ holds almost everywhere and $|f_r| < N_{\alpha}f$ let's us use dominated convergence.
-
-
+We can also represent $f_r$ by its Poisson integral, for $r < 1$, that is
+\[
+	f_r(z) = \frac{1}{2\pi} \int_{-\pi}^{\pi} P(z, e^{it})f_r(e^{it})\ dt.
+\]
+Letting $r$ go to $1$ gives us
+\[
+	f(z) = \frac{1}{2\pi} \int_{-\pi}^{\pi} P(z, e^{it})F(e^{it})\ dt,
+\]
+namely, $f$ is the Poisson integral of $F$.
 \end{proof}
 \begin{theorem}[F. and M. Riesz theorem]
 If $\mu$ is a complex Borel measure on $\mathbb{T}$ and
