--- a/verkefni.tex
+++ b/verkefni.tex
@@ -1042,7 +1042,8 @@ Let $E$ be a closed subset of $\mathbb{T}$ of Lebesgue-measure $0$,
 Then there exists an $F \in \mathcal{A}$, such that $F = f$ on $E$ and $F(\overline{\mathbb{D}}) \subset T$. % TODO skilgreina allt
 \end{theorem}
 This will be proved as Rudin did it in his original paper \citep{rudin}.
-We will break the proof into several lemmas.  % TODO how many?
+We will break the proof into several lemmas. % TODO how many?
+The first few lemmas are dedicated to showing the result holds for continuous simple functions, and the last lemma bridges the gap.
 \begin{lemma}
 \label{mylemma}
 Let $H$ be a closed set of Lebesgue-measure zero.
